# home-os

./: .gitignore  DEPLOYMENT.md  Justfile  README.md  Taskfile.yml  ansible.cfg  configure  docker-compose.pihole.yml  docker-compose.yml
.github/: renovate.json5
.github/workflows/: ci.yml
ansible/inventory/: .gitignore
ansible/inventory/group_vars/: all.yml
ansible/inventory/host_vars/: april.sops.yml  casey.sops.yml  donatello.sops.yml  leonardo.sops.yml  michelangelo.sops.yml  raphael.sops.yml  shredder.sops.yml
ansible/playbooks/cluster/: cluster-prepare.yml
ansible/playbooks/servers/: apt.yml  oh-my-fish.yml  timezone.yml
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
frontend/: Dockerfile  nginx.conf  package.json  vite.config.ts
frontend/src/: root.tsx
frontend/src/components/: Counter.tsx
frontend/src/routes/: index.tsx
kubernetes/apps/default/: kustomization.yaml
kubernetes/apps/kube-system/: kustomization.yaml
kubernetes/apps/monitoring/: kustomization.yaml
kubernetes/apps/system-upgrade/: kustomization.yaml
kubernetes/home-assistant/: deployment.yaml
kubernetes/nginx/: configmap.yml  ingress.yaml
kubernetes/pihole/: values.yml
kubernetes/uptime-kuma/: ingress.yml
later/nginx/: deployment.yaml
later/prometheus/: ingress.yaml
later/traefik/: kustomization.yaml  values.yaml
provision/ansible/: site.yml
services/: airupnp.Dockerfile
services/airupnp/: Dockerfile  entrypoint.sh  run.sh
terraform/cloudflare/: main.tf  secret.sops.yaml
tmpl/kubernetes/: cloudflare-ddns-secret.sops.yaml
(+74 files in other folders)
