[package]
name = "rpi-dashboard-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "^0.6.0"
clap = { version = "^4.0", features = ["derive"]}
tokio = { version = "^1.22.0", features = ["full"] }
tower = "^0.4.13"
tracing = "^0.1.37"
tracing-subscriber = "^0.3.16"
tower-http = { version = "^0.3.4", features = ["trace"] }

